--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://avatars.githubusercontent.com/u/129729329?s=400&u=ec9e1430d0e212
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: komurotairoku2@gmail.com
+  facebook: https://www.facebook.com/nguyen.van.hai.374581/
   flickr:
   github: https://github.com/haivan7
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: sherlock71
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
